hphp/test/zend/bad/ext-sqlite3/sqlite3_17_version.php
<?php
print_r(SQLite3::version());
echo "Done\n";
?>